[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/trade_screen/buy_sell_buttons.gd" type="Script" id=1]

[node name="BuySellButtons" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 120 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buy1Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 178.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buy 1"

[node name="Sell1Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 360.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sell 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 360.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuyMaxButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 178.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buy Max"

[node name="SellMaxButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 182.0
margin_right = 360.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sell Max"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Buy1Button" to="." method="_on_Buy1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Sell1Button" to="." method="_on_Sell1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BuyMaxButton" to="." method="_on_BuyMaxButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SellMaxButton" to="." method="_on_SellMaxButton_pressed"]
